--- a/TestApp/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/TestApp/Base.lproj/Main.storyboard
@@ -20,13 +20,95 @@
                                 <rect key="frame" x="0.0" y="143.5" width="414" height="752.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MaskInfoCell" rowHeight="101" id="zD2-CR-wO2" customClass="MaskInfoTableViewCell" customModule="TestApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="101"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MaskInfoCell" rowHeight="140" id="zD2-CR-wO2" customClass="MaskInfoTableViewCell" customModule="TestApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zD2-CR-wO2" id="Sa8-2e-Y43">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="101"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="藥局名稱" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqW-zN-tIN">
+                                                    <rect key="frame" x="10" y="7" width="207" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="電話" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="buI-uV-B1Z">
+                                                    <rect key="frame" x="217" y="7" width="207" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="成人數量" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCQ-h7-ojN">
+                                                    <rect key="frame" x="10" y="28" width="372.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小孩數量" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLP-7X-5C8">
+                                                    <rect key="frame" x="10" y="49" width="372.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地址" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qwQ-mN-hAD">
+                                                    <rect key="frame" x="10" y="70" width="372.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="更新日期" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ov-9K-ZH1">
+                                                    <rect key="frame" x="10" y="91" width="331" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trash" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3YP-8K-SXn">
+                                                    <rect key="frame" x="378.5" y="54" width="30" height="30.5"/>
+                                                    <color key="tintColor" systemColor="systemPinkColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="UyI-6c-smg"/>
+                                                        <constraint firstAttribute="width" secondItem="3YP-8K-SXn" secondAttribute="height" multiplier="1:1" id="gHt-P3-Duu"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3YP-8K-SXn" firstAttribute="centerX" secondItem="Sa8-2e-Y43" secondAttribute="centerX" multiplier="1.9" id="3Q4-89-KqD"/>
+                                                <constraint firstItem="9Ov-9K-ZH1" firstAttribute="leading" secondItem="ZqW-zN-tIN" secondAttribute="leading" id="4ZD-61-lFf"/>
+                                                <constraint firstItem="qwQ-mN-hAD" firstAttribute="leading" secondItem="ZqW-zN-tIN" secondAttribute="leading" id="5Cn-gV-gOI"/>
+                                                <constraint firstItem="qwQ-mN-hAD" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.9" id="6zu-em-AQd"/>
+                                                <constraint firstItem="buI-uV-B1Z" firstAttribute="leading" secondItem="ZqW-zN-tIN" secondAttribute="trailing" id="ChS-gw-Jo2"/>
+                                                <constraint firstItem="lLP-7X-5C8" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.9" id="GAn-NE-mBd"/>
+                                                <constraint firstItem="9Ov-9K-ZH1" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="Ixy-Qp-V98"/>
+                                                <constraint firstItem="ZqW-zN-tIN" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="Jb8-ka-w8g"/>
+                                                <constraint firstItem="ZqW-zN-tIN" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.5" id="RQH-1n-No0"/>
+                                                <constraint firstItem="sCQ-h7-ojN" firstAttribute="top" secondItem="ZqW-zN-tIN" secondAttribute="bottom" id="Ryw-Yg-CRV"/>
+                                                <constraint firstItem="9Ov-9K-ZH1" firstAttribute="top" secondItem="qwQ-mN-hAD" secondAttribute="bottom" id="Ssr-5z-woY"/>
+                                                <constraint firstItem="qwQ-mN-hAD" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="TtF-2K-MTc"/>
+                                                <constraint firstItem="ZqW-zN-tIN" firstAttribute="leading" secondItem="Sa8-2e-Y43" secondAttribute="leading" constant="10" id="XrI-zG-SfV"/>
+                                                <constraint firstItem="lLP-7X-5C8" firstAttribute="top" secondItem="sCQ-h7-ojN" secondAttribute="bottom" id="ZiH-SZ-ymf"/>
+                                                <constraint firstItem="qwQ-mN-hAD" firstAttribute="top" secondItem="lLP-7X-5C8" secondAttribute="bottom" id="aKg-FA-wee"/>
+                                                <constraint firstItem="9Ov-9K-ZH1" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.8" id="dDV-Ob-eF4"/>
+                                                <constraint firstItem="sCQ-h7-ojN" firstAttribute="leading" secondItem="ZqW-zN-tIN" secondAttribute="leading" id="hIE-85-E21"/>
+                                                <constraint firstItem="buI-uV-B1Z" firstAttribute="centerY" secondItem="ZqW-zN-tIN" secondAttribute="centerY" id="hlM-vl-Whe"/>
+                                                <constraint firstItem="lLP-7X-5C8" firstAttribute="leading" secondItem="ZqW-zN-tIN" secondAttribute="leading" id="iOa-IO-FRh"/>
+                                                <constraint firstItem="3YP-8K-SXn" firstAttribute="centerY" secondItem="Sa8-2e-Y43" secondAttribute="centerY" id="j6c-0b-bBh"/>
+                                                <constraint firstItem="sCQ-h7-ojN" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="lB9-Qf-47h"/>
+                                                <constraint firstItem="buI-uV-B1Z" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.5" id="pOA-Ul-Lxy"/>
+                                                <constraint firstItem="lLP-7X-5C8" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="pQT-iI-La4"/>
+                                                <constraint firstItem="ZqW-zN-tIN" firstAttribute="centerY" secondItem="Sa8-2e-Y43" secondAttribute="centerY" multiplier="0.25" id="pwf-vz-ITo"/>
+                                                <constraint firstItem="sCQ-h7-ojN" firstAttribute="width" secondItem="Sa8-2e-Y43" secondAttribute="width" multiplier="0.9" id="qFA-sN-r9d"/>
+                                                <constraint firstItem="buI-uV-B1Z" firstAttribute="height" secondItem="Sa8-2e-Y43" secondAttribute="height" multiplier="0.15" id="wF6-km-nvY"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="address" destination="qwQ-mN-hAD" id="gHv-MK-SFH"/>
+                                            <outlet property="adultMaskCount" destination="sCQ-h7-ojN" id="j9Y-to-HMh"/>
+                                            <outlet property="childMaskCount" destination="lLP-7X-5C8" id="f0j-mX-YvF"/>
+                                            <outlet property="name" destination="ZqW-zN-tIN" id="h84-qd-wo4"/>
+                                            <outlet property="phone" destination="buI-uV-B1Z" id="q5A-m3-ENi"/>
+                                            <outlet property="updatedDate" destination="9Ov-9K-ZH1" id="Jaf-ag-Mfq"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -50,8 +132,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="trash" catalog="system" width="121" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
